Fixes z-index of save buttons so they don't occlude dialogs

--- a/Paco-Server/ear/default/web/css/tabs.css
+++ b/Paco-Server/ear/default/web/css/tabs.css
@@ -25,7 +25,7 @@ md-tab-item.md-active {
   position: absolute;
   right: 0;
   top: 72px;
-  z-index: 100;
+  z-index: 10;
 }
 
 .edit .actions {
